# dependencies

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
tests/dependencies/: test_dummy.py
