[tool.poetry]
name = "dependencies"
version = "0.1.0"
description = "check python library dependencies."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
keywords = ['test', 'dependencies', 'aws', 'python']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.900"
pytest = "^6.2.0"
black = "^21.11b1"
pytest-cov = "^2.12.1"
coverage = "^6.1"
isort = "^5.10.1"
aws-sam-cli = "^1.59.0"
cfn-lint = "^0.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
