[tool.poetry]
name = "dependencies"
version = "0.1.0"
description = "check python library dependencies."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
keywords = ['test', 'dependencies', 'aws', 'python']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
pytest = "^7.2.0"
black = "^22.3.0"
pytest-cov = "^4.0.0"
coverage = "^7.0.3"
isort = "^5.11.4"
aws-sam-cli = "^1.33.0"
cfn-lint = "^0.55.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
